--- a/infiniteTile.css
+++ b/infiniteTile.css
@@ -2,6 +2,9 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
 
 
