--- a/docs/infiniteTile.css
+++ b/docs/infiniteTile.css
@@ -1,19 +1,23 @@
 .infinite-tile-container {
-    position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     width: 100%;
     height: 100%;
     overflow: scroll;
+
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 
 .infinite-tile-container__tile {
+    position: relative;
     box-sizing: border-box;
-    min-height: 100vh;
-    min-width: 100vw;
+    /*min-height: 100vh;*/
+    /*min-width: 100vw;*/
 }
 
 .infinite-tile-container__tile.is-clone {
-    background: red;
+    /*background: red;*/
 }
