--- a/docs/style.css
+++ b/docs/style.css
@@ -7,11 +7,11 @@ body {
     padding: 0;
    overflow:hidden;
     background-color: rgb(242, 242, 242);
-}
+  }
 p{
   font-family: terminal, helvetica, sans-serif;
-  font-size: 1.05em;
-
+  font-size: 1.07em;
+  /*font-size:0.999em;*/
 }
 a{
   color: black;
@@ -28,7 +28,6 @@ a:visited{
   }
 
   .grid-item {
-    
     /*border: 1px solid #B22222;*/
     text-align: center;
     width: 100vw;
@@ -42,10 +41,9 @@ a:visited{
     height: 80vh;
   }
 
-
 /**********************MENU*******************************/
 
-  .item1{
+.item1{
     background-image: url(./images/JUPE4.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -178,6 +176,120 @@ a:visited{
   z-index: 10;
   transform: rotate(-130deg);
 }
+.item9activetutos{
+  background-image: url(./images/tutos_vecto.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 50px;
+  margin-left: 75px;
+  z-index: 30;
+  transform: rotate(30deg);
+  animation: rotate30 8s infinite linear;
+}
+.item9inactivetutos{
+  background-image: url(./images/tutos_vecto.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 50px;
+  margin-left: 75px;
+  z-index: 30;
+  transform: rotate(30deg);
+  animation: rotate30 8s infinite linear;
+}
+@keyframes rotate30 {
+  0% {
+    transform: rotate(30deg);
+  }
+  100% {
+    transform: rotate(390deg);
+  }
+}
+.item9activegallery{
+  background-image: url(./images/gallery_final.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 55px;
+  height: 55px;
+  position: fixed;
+  bottom: 65px;
+  right: 30px;
+  z-index: 10;
+  transform: rotate(-25deg);
+  animation: rotate-25 8s infinite linear;
+}
+@keyframes rotate-25 {
+  0% {
+    transform: rotate(-25deg);
+  }
+  
+  100% {
+    transform: rotate(335deg);
+  }
+}
+.item9inactivegallery{
+  background-image: url(./images/gallery_final.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 68px;
+  right: 43px;
+  z-index: 30;
+  transform: rotate(-45deg);
+  animation: rotate-45 8s infinite linear;
+}
+@keyframes rotate-45 {
+  0% {
+    transform: rotate(-45deg);
+  }
+  
+  100% {
+    transform: rotate(315deg);
+  }
+}
+.item9activeexperience{
+  background-image: url(./images/generate.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  top: 54px;
+  right: 35px;
+  z-index: 30;
+  transform: rotate(140deg);
+  /*animation: rotate140 8s infinite linear;*/
+}
+.item9inactiveexperience{
+  background-image: url(./images/generate.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  top: 56px;
+  right: 40px;
+  z-index: 30;
+  transform: rotate(140deg);
+  animation: rotate140 8s infinite linear;
+}
+@keyframes rotate140 {
+  0% {
+    transform: rotate(140deg);
+  }
+  
+  100% {
+    transform: rotate(500deg);
+  }
+}
+
 
 /************************HOMEPAGE*****************************/
 
@@ -194,6 +306,7 @@ a:visited{
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 200;
+  pointer-events: none;
 }
 .texteintro{
   font-size: 1.2em;
@@ -202,7 +315,7 @@ a:visited{
   left: 50%;
   transform: translate(-50%, 0);
   text-align: center;
-  bottom: 85px;
+  bottom: 120px;
   width: 100%;
 }
 .tryitnow{
@@ -218,21 +331,43 @@ a:visited{
   z-index: 2;*/
   font-size: 1.7em;
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
   text-align: center;
-  bottom: 20px;
-  width: 60%;
+  bottom: 60px;
+  width: 100%;
   z-index: 2;
-
+  animation: 5s anim-lineUp ease-out;
+  /*animation: blinker 3s ease-in-out infinite;*/
 }
+
+@keyframes anim-lineUp {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  20% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+   
+  }
+}
+
+/*@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}*/
+
 .motif{
   height: 123%;
   width: auto;
-  /*object-fit: contain;
-  max-width: 95vw;
-max-height: 95vh;*/
-object-fit: contain;
+  object-fit: contain;
 
 }
 .motiflimite{
@@ -242,34 +377,6 @@ object-fit: contain;
 
 }
 /************************TUTOSPAGE*****************************/
-.item9activetutos{
-  background-image: url(./images/tutos_vecto.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  bottom: 0;
-  padding-bottom: 55px;
-  margin-left: 65px;
-  z-index: 30;
-  transform: rotate(30deg);
-
-}
-.item9inactivetutos{
-  background-image: url(./images/tutos_vecto.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
-  position: fixed;
-  bottom: 0;
-  padding-bottom: 55px;
-  margin-left: 65px;
-  z-index: 30;
-  transform: rotate(30deg);
-
-}
 
 video{
   border-radius: 20px;
@@ -281,85 +388,33 @@ video{
   position: absolute;*/
   
 }
-/*
-.grid-container-tutos {
-  display: grid;
-  grid-template-columns: auto auto auto ;
-  width: 200vw;
-  height: 200vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-}*/
 
-/*.tutos{
-  text-align: center;
-  width: 100vw;
-  height: 100vh;
-  align-self: center;
-  /*padding-left: 20px;
-  padding-right: 20px;
-  border: 10px solid rgb(242, 242, 242);
-
-}*/
 
 
 
 
 /************************GALLERYSPAGE*****************************/
-.item9activegallery{
-  background-image: url(./images/gallery_final.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 55px;
-  height: 55px;
-  position: fixed;
-  bottom: 65px;
-  right: 30px;
-  z-index: 10;
-  transform: rotate(-25deg);
-}
-.item9inactivegallery{
-  background-image: url(./images/gallery_final.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
-  position: fixed;
-  bottom: 68px;
-  right: 43px;
-  z-index: 30;
-  transform: rotate(-45deg);
-}
 
 /************************EXPERIENCE PAGE*****************************/
-.item9activeexperience{
-  background-image: url(./images/generate.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  top: 54px;
-  right: 35px;
-  z-index: 10;
-  transform: rotate(140deg);
+.bodypart{
+  max-width: 85vw;
+  max-height: 85vh;
+  object-fit: contain;
+  margin-top: 10%;
+  opacity:1;
 }
 
-.item9inactiveexperience{
-  background-image: url(./images/generate.svg);
+.hideshow{
   background-size: contain;
   background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   position: fixed;
-  top: 56px;
-  right: 40px;
-  z-index: 10;
-  transform: rotate(140deg);
+  z-index: 200;
+  bottom: 459px;
+  left: 239px;
+  animation: rotate0 12s infinite linear;
 }
-
-
 /************************GENERATED CLOTHES PAGES*****************************/
 .tshirt{
   max-width: 95vw;
@@ -372,168 +427,237 @@ video{
 /************************INSTRUCTIONS*****************************/
 .tools{
   text-align: left;
-  font-size: 1.4em;
+  margin-left: 50px;
+  margin-top: 20px;
+  font-size: 0.999em;
 }
-
 .itemtools{
   background-image: url(./images/tools.svg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 75px;
-  height: 75px;
+  width: 40px;
+  height: 40px;
   position: relative;
-  top: 50px;
-  right: 50px;
+  top: 35px;
+  left: 25px;
   transform: rotate(0deg);
 }
-
-.toolsblock{
-  transform: translate(2%, -80%);
-}
-
 .instructions{
   text-align: left;
-  width: 80%;
+  width: 90%;
   margin-left: 20px;
-  font-size: 1.4em;
+  margin-top: -15px;
+  font-size: 0.999em;
+  line-height: 1.03em; 
 }
-
 .iteminstructions{
   background-image: url(./images/steps.svg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 75px;
-  height: 75px;
+  width: 43px;
+  height: 43px;
   position: relative;
-  top: 55px;
-  right: 30px;
-  transform: rotate(0deg);
+  top: -5px;
+  left: 82vw;
+  transform: rotate(65deg);
+}
+#finished{
+  /*background-image: url(./images/done.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  top: 17px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transform: rotate(0deg);*/
+  font-size: 1.7em;
+  position: absolute;
+  text-align: center;
+  bottom: 20px;
+  width: 100%;
+  z-index: 2;
 }
 
-.instructionsblock{
-  transform: translate(-10%, 30%);
+.popupaddtogallery{
+  background-color: rgb(242, 242, 242);
+  /*border: 1px solid black;*/
+  width: 75%;
+  padding: 15px 15px 0px 15px;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  border-radius: 20px;
+  display: none;
+  text-align: center;
+  z-index: 2000;
 }
-
-
-
-/************************RESPONSIVE*****************************/
-/*
-@media screen and (max-width: 1000px) {
-
-  /*.tutos {
-    background-color: purple;
-  }*/
-/*
-  p{
-    font-size: 1.9em;
+#noshare, #yesshare{    
+  text-align: center;
+  background-color: transparent;
+    font-size: 1.1em;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding:0 40px;
   }
+/***************** INFINITE SLIDER INSTRUCTIONS *********************/
 
-  .texteintro{
 
-    bottom: 0;
-    right: 45px;
-    text-align: right;
-    width: 60%;
+.swiper-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+ 
+}
+
+.swiper-wrapper {
+  background: transparent;
+  width: 100%;
+  box-sizing: border-box;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  box-sizing: border-box;
+ /*border: 1px solid black;*/
+}
+
+.imgcentered{
+  max-width: 95vw;
+  max-height: 95vh;
+  object-fit: contain;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+.instructionstemplate1{
+  width: 85%;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  font-size: 2em;
+
+}
+
+.toolstemplate1{
+  text-align: left;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.8em;
+  margin-left: 20px;
+  line-height: 2em;
+}
+
+.itemtoolstemplate1{
+  background-image: url(./images/material.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 459px;
+  left: 239px;
+  animation: rotate0 12s infinite linear;
+}
+
+@keyframes rotate0 {
+  0% {
+    transform: rotate(0deg);
   }
-
-  video{
-    height: 75vh;
+  
+  100% {
+    transform: rotate(360deg);
   }
-
-  .grid-container-tutos {
-    grid-template-columns: 100vw 100vw 100vw ;
-  }
-
-
-  .item1{
-    width: 450px;
-    height: 450px;
-    bottom: -200px;
-    margin-left:-120px;
-}
-.item2{
-  width: 180px;
-  height: 250px;
-  margin-bottom: 70px;
-  bottom: 0;
-  margin-left: -30px;
-
-}
-.item3{
-  width: 220px;
-  height: 220px;
-  bottom: -100px;
-  margin-left: 65px;
-}
-.item9activetutos{
-  width: 100px;
-  height: 100px;
-  bottom: 60px;
-  margin-left: 155px;
-}
-
-.item10{
-  width: 300px;
-  height: 300px;
-  bottom: -120px;
-  right: -20px;
-}
-
-.item11{
-  width: 360px;
-  height: 360px;
-  bottom: -70px;
-  right: -150px;
-}
-
-.item12{
-  width: 200px;
-  height: 200px;
-  bottom: -20px;
-  right: 20px;
-
 }
 
 
-.item4{
-  width: 280px;
-  height: 280px;
-  top: -70px;
-  right: 10px;
+.iteminstructionstemplate1{
+  background-image: url(./images/step_by_step.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 459px;
+  left: 239px;
+  animation: rotate0 12s infinite linear;
 }
 
-.item5{
-  width: 320px;
-  height: 320px;
-  top: -160px;
-  right: 80px;
-}
-.item6{
-  width: 320px;
-  height: 320px;
-  top: -130px;
-  right: -80px;
-}
-.item7{
-  width: 260px;
-  height: 260px;
-  top: -90px;
-  right: 30px;
-}
-.item8logo{
-  width: 100px;
-  height: 100px;
-  top: 20px;
-  right: 350px;
+.welldone{
+  background-image: url(./images/welldone.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 459px;
+  left: 239px;
+  animation: rotate0 12s infinite linear;
 }
 
-.logo{
-  width: auto ;
-  height: 600px ;
-  z-index: 200;
+#yessharetemplate1{
+  text-align: center;
+  background-color: transparent;
+    font-size: 2em;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-bottom: 120px;
+    margin-right: 42vw;
 }
 
-}*/
 
+.textcentre{
+  text-align: left;
+width: 100%;
+margin-left: 25px;
+}
+
+.legende{
+  position: fixed;
+  transform: rotate(-90deg);
+  left: -65px;
+  top: 11%;
+  z-index: 20;
+  display: block
+}
+
+.imglegende{
+  width: 70px;
+  height: auto;
+  position: fixed;
+  left: -5px;
+  top: 25%;
+  z-index: 10;
+}
+
+.instructions{
+  background-image: url(./images/instructions.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 215px;
+  left: 220px;
+  animation: rotate0 12s infinite linear;
+}
 
 
