--- a/docs/style.css
+++ b/docs/style.css
@@ -24,7 +24,7 @@ a:visited{
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-   
+
   }
 
   .grid-item {
@@ -227,7 +227,7 @@ a:visited{
   0% {
     transform: rotate(-25deg);
   }
-  
+
   100% {
     transform: rotate(335deg);
   }
@@ -249,7 +249,7 @@ a:visited{
   0% {
     transform: rotate(-45deg);
   }
-  
+
   100% {
     transform: rotate(315deg);
   }
@@ -284,7 +284,7 @@ a:visited{
   0% {
     transform: rotate(140deg);
   }
-  
+
   100% {
     transform: rotate(500deg);
   }
@@ -354,7 +354,7 @@ a:visited{
   100% {
     opacity: 1;
     transform: translateY(0%);
-   
+
   }
 }
 
@@ -386,7 +386,7 @@ video{
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;*/
-  
+
 }
 
 
@@ -448,7 +448,7 @@ video{
   margin-left: 20px;
   margin-top: -15px;
   font-size: 0.999em;
-  line-height: 1.03em; 
+  line-height: 1.03em;
 }
 .iteminstructions{
   background-image: url(./images/steps.svg);
@@ -494,7 +494,7 @@ video{
   text-align: center;
   z-index: 2000;
 }
-#noshare, #yesshare{    
+#noshare, #yesshare{
   text-align: center;
   background-color: transparent;
     font-size: 1.1em;
@@ -514,7 +514,7 @@ video{
   height: 100%;
   overflow: hidden;
   box-sizing: border-box;
- 
+
 }
 
 .swiper-wrapper {
@@ -581,7 +581,7 @@ video{
   0% {
     transform: rotate(0deg);
   }
-  
+
   100% {
     transform: rotate(360deg);
   }
@@ -660,4 +660,9 @@ margin-left: 25px;
   animation: rotate0 12s infinite linear;
 }
 
-
+#clothtype {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
