--- a/docs/style.css
+++ b/docs/style.css
@@ -187,7 +187,7 @@ a:visited{
   margin-left: 75px;
   z-index: 30;
   transform: rotate(30deg);
-  animation: rotate30 8s infinite linear;
+  /*animation: rotate30 8s infinite linear;*/
 }
 .item9inactivetutos{
   background-image: url(./images/tutos_vecto.svg);
@@ -221,7 +221,7 @@ a:visited{
   right: 30px;
   z-index: 10;
   transform: rotate(-25deg);
-  animation: rotate-25 8s infinite linear;
+  /*animation: rotate-25 8s infinite linear;*/
 }
 @keyframes rotate-25 {
   0% {
@@ -395,6 +395,11 @@ video{
 
 /************************GALLERYSPAGE*****************************/
 
+.imggallery{
+  margin-top: 20px;
+  height: 68vh;
+  border-radius: 20px;
+}
 /************************EXPERIENCE PAGE*****************************/
 .bodypart{
   max-width: 85vw;
@@ -425,7 +430,7 @@ video{
 
 
 /************************INSTRUCTIONS*****************************/
-.tools{
+/*.tools{
   text-align: left;
   margin-left: 50px;
   margin-top: 20px;
@@ -471,7 +476,7 @@ video{
   top: 17px;
   left: 50%;
   transform: translate(-50%, 0);
-  transform: rotate(0deg);*/
+  transform: rotate(0deg);-------
   font-size: 1.7em;
   position: absolute;
   text-align: center;
@@ -482,7 +487,7 @@ video{
 
 .popupaddtogallery{
   background-color: rgb(242, 242, 242);
-  /*border: 1px solid black;*/
+  /*border: 1px solid black;
   width: 75%;
   padding: 15px 15px 0px 15px;
   position: absolute;
@@ -502,7 +507,7 @@ video{
     outline: none;
     cursor: pointer;
     padding:0 40px;
-  }
+  }*/
 /***************** INFINITE SLIDER INSTRUCTIONS *********************/
 
 
@@ -560,9 +565,9 @@ video{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.8em;
+  font-size: 2em;
   margin-left: 20px;
-  line-height: 2em;
+  line-height: 1.4em;
 }
 
 .itemtoolstemplate1{
@@ -572,7 +577,7 @@ video{
   width: 80px;
   height: 80px;
   position: absolute;
-  bottom: 459px;
+  bottom: 430px;
   left: 239px;
   animation: rotate0 12s infinite linear;
 }
@@ -595,7 +600,7 @@ video{
   width: 80px;
   height: 80px;
   position: absolute;
-  bottom: 459px;
+  bottom: 430px;
   left: 239px;
   animation: rotate0 12s infinite linear;
 }
@@ -607,7 +612,7 @@ video{
   width: 80px;
   height: 80px;
   position: absolute;
-  bottom: 459px;
+  bottom: 430px;
   left: 239px;
   animation: rotate0 12s infinite linear;
 }
@@ -633,8 +638,8 @@ margin-left: 25px;
 .legende{
   position: fixed;
   transform: rotate(-90deg);
-  left: -65px;
-  top: 11%;
+  left: -75px;
+  top: 13%;
   z-index: 20;
   display: block
 }
@@ -660,9 +665,4 @@ margin-left: 25px;
   animation: rotate0 12s infinite linear;
 }
 
-#clothtype {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
+
